--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "install": "^0.13.0",
@@ -23,6 +25,7 @@
     "react-native": "^0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-mmkv-storage": "^0.6.6",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
